# causal-discovery

./: .gitignore  LICENSE  README.md  pyproject.toml
causal_discovery/: synthetic_dataset.py  utils.py
causal_discovery/algos/: notears.py
causal_discovery/scripts/: display_network.py  run_notears.py
